[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"
itertools = "0.10.3"
superslice = "1.0.0"

[[bin]]
name = "make_contest_folder"
path = "src/make_contest_folder.rs"

[[bin]]
name = "abc249_a"
path = "src/abc249/a.rs"

[[bin]]
name = "abc249_b"
path = "src/abc249/b.rs"

[[bin]]
name = "abc249_c"
path = "src/abc249/c.rs"

[[bin]]
name = "abc249_d"
path = "src/abc249/d.rs"

[[bin]]
name = "abc249_e"
path = "src/abc249/e.rs"

[[bin]]
name = "abc249_f"
path = "src/abc249/f.rs"

[[bin]]
name = "abc249_g"
path = "src/abc249/g.rs"

[[bin]]
name = "abc249_h"
path = "src/abc249/h.rs"

[[bin]]
name = "abc248_a"
path = "src/abc248/a.rs"

[[bin]]
name = "abc248_b"
path = "src/abc248/b.rs"

[[bin]]
name = "abc248_c"
path = "src/abc248/c.rs"

[[bin]]
name = "abc248_d"
path = "src/abc248/d.rs"

[[bin]]
name = "abc248_e"
path = "src/abc248/e.rs"

[[bin]]
name = "abc248_f"
path = "src/abc248/f.rs"

[[bin]]
name = "abc248_g"
path = "src/abc248/g.rs"

[[bin]]
name = "abc248_h"
path = "src/abc248/h.rs"

[[bin]]
name = "abc247_a"
path = "src/abc247/a.rs"

[[bin]]
name = "abc247_b"
path = "src/abc247/b.rs"

[[bin]]
name = "abc247_c"
path = "src/abc247/c.rs"

[[bin]]
name = "abc247_d"
path = "src/abc247/d.rs"

[[bin]]
name = "abc247_e"
path = "src/abc247/e.rs"

[[bin]]
name = "abc247_f"
path = "src/abc247/f.rs"

[[bin]]
name = "abc247_g"
path = "src/abc247/g.rs"

[[bin]]
name = "abc247_h"
path = "src/abc247/h.rs"

[[bin]]
name = "abc246_a"
path = "src/abc246/a.rs"

[[bin]]
name = "abc246_b"
path = "src/abc246/b.rs"

[[bin]]
name = "abc246_c"
path = "src/abc246/c.rs"

[[bin]]
name = "abc246_d"
path = "src/abc246/d.rs"

[[bin]]
name = "abc246_e"
path = "src/abc246/e.rs"

[[bin]]
name = "abc246_f"
path = "src/abc246/f.rs"

[[bin]]
name = "abc246_g"
path = "src/abc246/g.rs"

[[bin]]
name = "abc246_h"
path = "src/abc246/h.rs"

[[bin]]
name = "abc245_a"
path = "src/abc245/a.rs"

[[bin]]
name = "abc245_b"
path = "src/abc245/b.rs"

[[bin]]
name = "abc245_c"
path = "src/abc245/c.rs"

[[bin]]
name = "abc245_d"
path = "src/abc245/d.rs"

[[bin]]
name = "abc245_e"
path = "src/abc245/e.rs"

[[bin]]
name = "abc245_f"
path = "src/abc245/f.rs"

[[bin]]
name = "abc245_g"
path = "src/abc245/g.rs"

[[bin]]
name = "abc245_h"
path = "src/abc245/h.rs"

[[bin]]
name = "abc250_a"
path = "src/abc250/a.rs"

[[bin]]
name = "abc250_b"
path = "src/abc250/b.rs"

[[bin]]
name = "abc250_c"
path = "src/abc250/c.rs"

[[bin]]
name = "abc250_d"
path = "src/abc250/d.rs"

[[bin]]
name = "abc250_e"
path = "src/abc250/e.rs"

[[bin]]
name = "abc250_f"
path = "src/abc250/f.rs"

[[bin]]
name = "abc250_g"
path = "src/abc250/g.rs"

[[bin]]
name = "abc250_h"
path = "src/abc250/h.rs"

[[bin]]
name = "abc252_a"
path = "src/abc252/a.rs"

[[bin]]
name = "abc252_b"
path = "src/abc252/b.rs"

[[bin]]
name = "abc252_c"
path = "src/abc252/c.rs"

[[bin]]
name = "abc252_d"
path = "src/abc252/d.rs"

[[bin]]
name = "abc252_e"
path = "src/abc252/e.rs"

[[bin]]
name = "abc252_f"
path = "src/abc252/f.rs"

[[bin]]
name = "abc252_g"
path = "src/abc252/g.rs"

[[bin]]
name = "abc252_h"
path = "src/abc252/h.rs"

[[bin]]
name = "abc244_a"
path = "src/abc244/a.rs"

[[bin]]
name = "abc244_b"
path = "src/abc244/b.rs"

[[bin]]
name = "abc244_c"
path = "src/abc244/c.rs"

[[bin]]
name = "abc244_d"
path = "src/abc244/d.rs"

[[bin]]
name = "abc244_e"
path = "src/abc244/e.rs"

[[bin]]
name = "abc244_f"
path = "src/abc244/f.rs"

[[bin]]
name = "abc244_g"
path = "src/abc244/g.rs"

[[bin]]
name = "abc244_h"
path = "src/abc244/h.rs"

[[bin]]
name = "abc253_a"
path = "src/abc253/a.rs"

[[bin]]
name = "abc253_b"
path = "src/abc253/b.rs"

[[bin]]
name = "abc253_c"
path = "src/abc253/c.rs"

[[bin]]
name = "abc253_d"
path = "src/abc253/d.rs"

[[bin]]
name = "abc253_e"
path = "src/abc253/e.rs"

[[bin]]
name = "abc253_f"
path = "src/abc253/f.rs"

[[bin]]
name = "abc253_g"
path = "src/abc253/g.rs"

[[bin]]
name = "abc253_h"
path = "src/abc253/h.rs"

[[bin]]
name = "abc254_a"
path = "src/abc254/a.rs"

[[bin]]
name = "abc254_b"
path = "src/abc254/b.rs"

[[bin]]
name = "abc254_c"
path = "src/abc254/c.rs"

[[bin]]
name = "abc254_d"
path = "src/abc254/d.rs"

[[bin]]
name = "abc254_e"
path = "src/abc254/e.rs"

[[bin]]
name = "abc254_f"
path = "src/abc254/f.rs"

[[bin]]
name = "abc254_g"
path = "src/abc254/g.rs"

[[bin]]
name = "abc254_h"
path = "src/abc254/h.rs"

[[bin]]
name = "abc255_a"
path = "src/abc255/a.rs"

[[bin]]
name = "abc255_b"
path = "src/abc255/b.rs"

[[bin]]
name = "abc255_c"
path = "src/abc255/c.rs"

[[bin]]
name = "abc255_d"
path = "src/abc255/d.rs"

[[bin]]
name = "abc255_e"
path = "src/abc255/e.rs"

[[bin]]
name = "abc255_f"
path = "src/abc255/f.rs"

[[bin]]
name = "abc255_g"
path = "src/abc255/g.rs"

[[bin]]
name = "abc255_h"
path = "src/abc255/h.rs"

[[bin]]
name = "abc256_a"
path = "src/abc256/a.rs"

[[bin]]
name = "abc256_b"
path = "src/abc256/b.rs"

[[bin]]
name = "abc256_c"
path = "src/abc256/c.rs"

[[bin]]
name = "abc256_d"
path = "src/abc256/d.rs"

[[bin]]
name = "abc256_e"
path = "src/abc256/e.rs"

[[bin]]
name = "abc256_f"
path = "src/abc256/f.rs"

[[bin]]
name = "abc256_g"
path = "src/abc256/g.rs"

[[bin]]
name = "abc256_h"
path = "src/abc256/h.rs"

[[bin]]
name = "abc257_a"
path = "src/abc257/a.rs"

[[bin]]
name = "abc257_b"
path = "src/abc257/b.rs"

[[bin]]
name = "abc257_c"
path = "src/abc257/c.rs"

[[bin]]
name = "abc257_d"
path = "src/abc257/d.rs"

[[bin]]
name = "abc257_e"
path = "src/abc257/e.rs"

[[bin]]
name = "abc257_f"
path = "src/abc257/f.rs"

[[bin]]
name = "abc257_g"
path = "src/abc257/g.rs"

[[bin]]
name = "abc257_h"
path = "src/abc257/h.rs"

[[bin]]
name = "abc258_a"
path = "src/abc258/a.rs"

[[bin]]
name = "abc258_b"
path = "src/abc258/b.rs"

[[bin]]
name = "abc258_c"
path = "src/abc258/c.rs"

[[bin]]
name = "abc258_d"
path = "src/abc258/d.rs"

[[bin]]
name = "abc258_e"
path = "src/abc258/e.rs"

[[bin]]
name = "abc258_f"
path = "src/abc258/f.rs"

[[bin]]
name = "abc258_g"
path = "src/abc258/g.rs"

[[bin]]
name = "abc258_h"
path = "src/abc258/h.rs"

[[bin]]
name = "abc259_a"
path = "src/abc259/a.rs"

[[bin]]
name = "abc259_b"
path = "src/abc259/b.rs"

[[bin]]
name = "abc259_c"
path = "src/abc259/c.rs"

[[bin]]
name = "abc259_d"
path = "src/abc259/d.rs"

[[bin]]
name = "abc259_e"
path = "src/abc259/e.rs"

[[bin]]
name = "abc259_f"
path = "src/abc259/f.rs"

[[bin]]
name = "abc259_g"
path = "src/abc259/g.rs"

[[bin]]
name = "abc259_h"
path = "src/abc259/h.rs"

[[bin]]
name = "abc260_a"
path = "src/abc260/a.rs"

[[bin]]
name = "abc260_b"
path = "src/abc260/b.rs"

[[bin]]
name = "abc260_c"
path = "src/abc260/c.rs"

[[bin]]
name = "abc260_d"
path = "src/abc260/d.rs"

[[bin]]
name = "abc260_e"
path = "src/abc260/e.rs"

[[bin]]
name = "abc260_f"
path = "src/abc260/f.rs"

[[bin]]
name = "abc260_g"
path = "src/abc260/g.rs"

[[bin]]
name = "abc260_h"
path = "src/abc260/h.rs"

[[bin]]
name = "abc261_a"
path = "src/abc261/a.rs"

[[bin]]
name = "abc261_b"
path = "src/abc261/b.rs"

[[bin]]
name = "abc261_c"
path = "src/abc261/c.rs"

[[bin]]
name = "abc261_d"
path = "src/abc261/d.rs"

[[bin]]
name = "abc261_e"
path = "src/abc261/e.rs"

[[bin]]
name = "abc261_f"
path = "src/abc261/f.rs"

[[bin]]
name = "abc261_g"
path = "src/abc261/g.rs"

[[bin]]
name = "abc261_h"
path = "src/abc261/h.rs"

[[bin]]
name = "abc262_a"
path = "src/abc262/a.rs"

[[bin]]
name = "abc262_b"
path = "src/abc262/b.rs"

[[bin]]
name = "abc262_c"
path = "src/abc262/c.rs"

[[bin]]
name = "abc262_d"
path = "src/abc262/d.rs"

[[bin]]
name = "abc262_e"
path = "src/abc262/e.rs"

[[bin]]
name = "abc262_f"
path = "src/abc262/f.rs"

[[bin]]
name = "abc262_g"
path = "src/abc262/g.rs"

[[bin]]
name = "abc262_h"
path = "src/abc262/h.rs"

[[bin]]
name = "abc263_a"
path = "src/abc263/a.rs"

[[bin]]
name = "abc263_b"
path = "src/abc263/b.rs"

[[bin]]
name = "abc263_c"
path = "src/abc263/c.rs"

[[bin]]
name = "abc263_d"
path = "src/abc263/d.rs"

[[bin]]
name = "abc263_e"
path = "src/abc263/e.rs"

[[bin]]
name = "abc263_f"
path = "src/abc263/f.rs"

[[bin]]
name = "abc263_g"
path = "src/abc263/g.rs"

[[bin]]
name = "abc263_h"
path = "src/abc263/h.rs"

[[bin]]
name = "abc264_a"
path = "src/abc264/a.rs"

[[bin]]
name = "abc264_b"
path = "src/abc264/b.rs"

[[bin]]
name = "abc264_c"
path = "src/abc264/c.rs"

[[bin]]
name = "abc264_d"
path = "src/abc264/d.rs"

[[bin]]
name = "abc264_e"
path = "src/abc264/e.rs"

[[bin]]
name = "abc264_f"
path = "src/abc264/f.rs"

[[bin]]
name = "abc264_g"
path = "src/abc264/g.rs"

[[bin]]
name = "abc264_h"
path = "src/abc264/h.rs"

[[bin]]
name = "abc265_a"
path = "src/abc265/a.rs"

[[bin]]
name = "abc265_b"
path = "src/abc265/b.rs"

[[bin]]
name = "abc265_c"
path = "src/abc265/c.rs"

[[bin]]
name = "abc265_d"
path = "src/abc265/d.rs"

[[bin]]
name = "abc265_e"
path = "src/abc265/e.rs"

[[bin]]
name = "abc265_f"
path = "src/abc265/f.rs"

[[bin]]
name = "abc265_g"
path = "src/abc265/g.rs"

[[bin]]
name = "abc265_h"
path = "src/abc265/h.rs"

[[bin]]
name = "abc266_a"
path = "src/abc266/a.rs"

[[bin]]
name = "abc266_b"
path = "src/abc266/b.rs"

[[bin]]
name = "abc266_c"
path = "src/abc266/c.rs"

[[bin]]
name = "abc266_d"
path = "src/abc266/d.rs"

[[bin]]
name = "abc266_e"
path = "src/abc266/e.rs"

[[bin]]
name = "abc266_f"
path = "src/abc266/f.rs"

[[bin]]
name = "abc266_g"
path = "src/abc266/g.rs"

[[bin]]
name = "abc266_h"
path = "src/abc266/h.rs"

[[bin]]
name = "abc267_a"
path = "src/abc267/a.rs"

[[bin]]
name = "abc267_b"
path = "src/abc267/b.rs"

[[bin]]
name = "abc267_c"
path = "src/abc267/c.rs"

[[bin]]
name = "abc267_d"
path = "src/abc267/d.rs"

[[bin]]
name = "abc267_e"
path = "src/abc267/e.rs"

[[bin]]
name = "abc267_f"
path = "src/abc267/f.rs"

[[bin]]
name = "abc267_g"
path = "src/abc267/g.rs"

[[bin]]
name = "abc267_h"
path = "src/abc267/h.rs"

[[bin]]
name = "abc268_a"
path = "src/abc268/a.rs"

[[bin]]
name = "abc268_b"
path = "src/abc268/b.rs"

[[bin]]
name = "abc268_c"
path = "src/abc268/c.rs"

[[bin]]
name = "abc268_d"
path = "src/abc268/d.rs"

[[bin]]
name = "abc268_e"
path = "src/abc268/e.rs"

[[bin]]
name = "abc268_f"
path = "src/abc268/f.rs"

[[bin]]
name = "abc268_g"
path = "src/abc268/g.rs"

[[bin]]
name = "abc268_h"
path = "src/abc268/h.rs"

[[bin]]
name = "abc269_a"
path = "src/abc269/a.rs"

[[bin]]
name = "abc269_b"
path = "src/abc269/b.rs"

[[bin]]
name = "abc269_c"
path = "src/abc269/c.rs"

[[bin]]
name = "abc269_d"
path = "src/abc269/d.rs"

[[bin]]
name = "abc269_e"
path = "src/abc269/e.rs"

[[bin]]
name = "abc269_f"
path = "src/abc269/f.rs"

[[bin]]
name = "abc269_g"
path = "src/abc269/g.rs"

[[bin]]
name = "abc269_h"
path = "src/abc269/h.rs"

[[bin]]
name = "abc270_a"
path = "src/abc270/a.rs"

[[bin]]
name = "abc270_b"
path = "src/abc270/b.rs"

[[bin]]
name = "abc270_c"
path = "src/abc270/c.rs"

[[bin]]
name = "abc270_d"
path = "src/abc270/d.rs"

[[bin]]
name = "abc270_e"
path = "src/abc270/e.rs"

[[bin]]
name = "abc270_f"
path = "src/abc270/f.rs"

[[bin]]
name = "abc270_g"
path = "src/abc270/g.rs"

[[bin]]
name = "abc270_h"
path = "src/abc270/h.rs"

[[bin]]
name = "abc271_a"
path = "src/abc271/a.rs"

[[bin]]
name = "abc271_b"
path = "src/abc271/b.rs"

[[bin]]
name = "abc271_c"
path = "src/abc271/c.rs"

[[bin]]
name = "abc271_d"
path = "src/abc271/d.rs"

[[bin]]
name = "abc271_e"
path = "src/abc271/e.rs"

[[bin]]
name = "abc271_f"
path = "src/abc271/f.rs"

[[bin]]
name = "abc271_g"
path = "src/abc271/g.rs"

[[bin]]
name = "abc271_h"
path = "src/abc271/h.rs"

[[bin]]
name = "abc272_a"
path = "src/abc272/a.rs"

[[bin]]
name = "abc272_b"
path = "src/abc272/b.rs"

[[bin]]
name = "abc272_c"
path = "src/abc272/c.rs"

[[bin]]
name = "abc272_d"
path = "src/abc272/d.rs"

[[bin]]
name = "abc272_e"
path = "src/abc272/e.rs"

[[bin]]
name = "abc272_f"
path = "src/abc272/f.rs"

[[bin]]
name = "abc272_g"
path = "src/abc272/g.rs"

[[bin]]
name = "abc272_h"
path = "src/abc272/h.rs"

[[bin]]
name = "abc273_a"
path = "src/abc273/a.rs"

[[bin]]
name = "abc273_b"
path = "src/abc273/b.rs"

[[bin]]
name = "abc273_c"
path = "src/abc273/c.rs"

[[bin]]
name = "abc273_d"
path = "src/abc273/d.rs"

[[bin]]
name = "abc273_e"
path = "src/abc273/e.rs"

[[bin]]
name = "abc273_f"
path = "src/abc273/f.rs"

[[bin]]
name = "abc273_g"
path = "src/abc273/g.rs"

[[bin]]
name = "abc273_h"
path = "src/abc273/h.rs"

[[bin]]
name = "abc274_a"
path = "src/abc274/a.rs"

[[bin]]
name = "abc274_b"
path = "src/abc274/b.rs"

[[bin]]
name = "abc274_c"
path = "src/abc274/c.rs"

[[bin]]
name = "abc274_d"
path = "src/abc274/d.rs"

[[bin]]
name = "abc274_e"
path = "src/abc274/e.rs"

[[bin]]
name = "abc274_f"
path = "src/abc274/f.rs"

[[bin]]
name = "abc274_g"
path = "src/abc274/g.rs"

[[bin]]
name = "abc274_h"
path = "src/abc274/h.rs"

[[bin]]
name = "abc275_a"
path = "src/abc275/a.rs"

[[bin]]
name = "abc275_b"
path = "src/abc275/b.rs"

[[bin]]
name = "abc275_c"
path = "src/abc275/c.rs"

[[bin]]
name = "abc275_d"
path = "src/abc275/d.rs"

[[bin]]
name = "abc275_e"
path = "src/abc275/e.rs"

[[bin]]
name = "abc275_f"
path = "src/abc275/f.rs"

[[bin]]
name = "abc275_g"
path = "src/abc275/g.rs"

[[bin]]
name = "abc275_h"
path = "src/abc275/h.rs"

[[bin]]
name = "abc276_a"
path = "src/abc276/a.rs"

[[bin]]
name = "abc276_b"
path = "src/abc276/b.rs"

[[bin]]
name = "abc276_c"
path = "src/abc276/c.rs"

[[bin]]
name = "abc276_d"
path = "src/abc276/d.rs"

[[bin]]
name = "abc276_e"
path = "src/abc276/e.rs"

[[bin]]
name = "abc276_f"
path = "src/abc276/f.rs"

[[bin]]
name = "abc276_g"
path = "src/abc276/g.rs"

[[bin]]
name = "abc276_h"
path = "src/abc276/h.rs"

[[bin]]
name = "abc277_a"
path = "src/abc277/a.rs"

[[bin]]
name = "abc277_b"
path = "src/abc277/b.rs"

[[bin]]
name = "abc277_c"
path = "src/abc277/c.rs"

[[bin]]
name = "abc277_d"
path = "src/abc277/d.rs"

[[bin]]
name = "abc277_e"
path = "src/abc277/e.rs"

[[bin]]
name = "abc277_f"
path = "src/abc277/f.rs"

[[bin]]
name = "abc277_g"
path = "src/abc277/g.rs"

[[bin]]
name = "abc277_h"
path = "src/abc277/h.rs"

[[bin]]
name = "abc279_a"
path = "src/abc279/a.rs"

[[bin]]
name = "abc279_b"
path = "src/abc279/b.rs"

[[bin]]
name = "abc279_c"
path = "src/abc279/c.rs"

[[bin]]
name = "abc279_d"
path = "src/abc279/d.rs"

[[bin]]
name = "abc279_e"
path = "src/abc279/e.rs"

[[bin]]
name = "abc279_f"
path = "src/abc279/f.rs"

[[bin]]
name = "abc279_g"
path = "src/abc279/g.rs"

[[bin]]
name = "abc279_h"
path = "src/abc279/h.rs"

[[bin]]
name = "abc278_a"
path = "src/abc278/a.rs"

[[bin]]
name = "abc278_b"
path = "src/abc278/b.rs"

[[bin]]
name = "abc278_c"
path = "src/abc278/c.rs"

[[bin]]
name = "abc278_d"
path = "src/abc278/d.rs"

[[bin]]
name = "abc278_e"
path = "src/abc278/e.rs"

[[bin]]
name = "abc278_f"
path = "src/abc278/f.rs"

[[bin]]
name = "abc278_g"
path = "src/abc278/g.rs"

[[bin]]
name = "abc278_h"
path = "src/abc278/h.rs"

[[bin]]
name = "abc280_a"
path = "src/abc280/a.rs"

[[bin]]
name = "abc280_b"
path = "src/abc280/b.rs"

[[bin]]
name = "abc280_c"
path = "src/abc280/c.rs"

[[bin]]
name = "abc280_d"
path = "src/abc280/d.rs"

[[bin]]
name = "abc280_e"
path = "src/abc280/e.rs"

[[bin]]
name = "abc280_f"
path = "src/abc280/f.rs"

[[bin]]
name = "abc280_g"
path = "src/abc280/g.rs"

[[bin]]
name = "abc280_h"
path = "src/abc280/h.rs"

[[bin]]
name = "abc281_a"
path = "src/abc281/a.rs"

[[bin]]
name = "abc281_b"
path = "src/abc281/b.rs"

[[bin]]
name = "abc281_c"
path = "src/abc281/c.rs"

[[bin]]
name = "abc281_d"
path = "src/abc281/d.rs"

[[bin]]
name = "abc281_e"
path = "src/abc281/e.rs"

[[bin]]
name = "abc281_f"
path = "src/abc281/f.rs"

[[bin]]
name = "abc281_g"
path = "src/abc281/g.rs"

[[bin]]
name = "abc281_h"
path = "src/abc281/h.rs"

[[bin]]
name = "abc282_a"
path = "src/abc282/a.rs"

[[bin]]
name = "abc282_b"
path = "src/abc282/b.rs"

[[bin]]
name = "abc282_c"
path = "src/abc282/c.rs"

[[bin]]
name = "abc282_d"
path = "src/abc282/d.rs"

[[bin]]
name = "abc282_e"
path = "src/abc282/e.rs"

[[bin]]
name = "abc282_f"
path = "src/abc282/f.rs"

[[bin]]
name = "abc282_g"
path = "src/abc282/g.rs"

[[bin]]
name = "abc282_h"
path = "src/abc282/h.rs"

[[bin]]
name = "abc283_a"
path = "src/abc283/a.rs"

[[bin]]
name = "abc283_b"
path = "src/abc283/b.rs"

[[bin]]
name = "abc283_c"
path = "src/abc283/c.rs"

[[bin]]
name = "abc283_d"
path = "src/abc283/d.rs"

[[bin]]
name = "abc283_e"
path = "src/abc283/e.rs"

[[bin]]
name = "abc283_f"
path = "src/abc283/f.rs"

[[bin]]
name = "abc283_g"
path = "src/abc283/g.rs"

[[bin]]
name = "abc283_h"
path = "src/abc283/h.rs"

[[bin]]
name = "abc251_a"
path = "src/abc251/a.rs"

[[bin]]
name = "abc251_b"
path = "src/abc251/b.rs"

[[bin]]
name = "abc251_c"
path = "src/abc251/c.rs"

[[bin]]
name = "abc251_d"
path = "src/abc251/d.rs"

[[bin]]
name = "abc251_e"
path = "src/abc251/e.rs"

[[bin]]
name = "abc251_f"
path = "src/abc251/f.rs"

[[bin]]
name = "abc251_g"
path = "src/abc251/g.rs"

[[bin]]
name = "abc251_h"
path = "src/abc251/h.rs"

[[bin]]
name = "abc243_a"
path = "src/abc243/a.rs"

[[bin]]
name = "abc243_b"
path = "src/abc243/b.rs"

[[bin]]
name = "abc243_c"
path = "src/abc243/c.rs"

[[bin]]
name = "abc243_d"
path = "src/abc243/d.rs"

[[bin]]
name = "abc243_e"
path = "src/abc243/e.rs"

[[bin]]
name = "abc243_f"
path = "src/abc243/f.rs"

[[bin]]
name = "abc243_g"
path = "src/abc243/g.rs"

[[bin]]
name = "abc243_h"
path = "src/abc243/h.rs"

[[bin]]
name = "abc242_a"
path = "src/abc242/a.rs"

[[bin]]
name = "abc242_b"
path = "src/abc242/b.rs"

[[bin]]
name = "abc242_c"
path = "src/abc242/c.rs"

[[bin]]
name = "abc242_d"
path = "src/abc242/d.rs"

[[bin]]
name = "abc242_e"
path = "src/abc242/e.rs"

[[bin]]
name = "abc242_f"
path = "src/abc242/f.rs"

[[bin]]
name = "abc242_g"
path = "src/abc242/g.rs"

[[bin]]
name = "abc242_h"
path = "src/abc242/h.rs"

[[bin]]
name = "abc241_a"
path = "src/abc241/a.rs"

[[bin]]
name = "abc241_b"
path = "src/abc241/b.rs"

[[bin]]
name = "abc241_c"
path = "src/abc241/c.rs"

[[bin]]
name = "abc241_d"
path = "src/abc241/d.rs"

[[bin]]
name = "abc241_e"
path = "src/abc241/e.rs"

[[bin]]
name = "abc241_f"
path = "src/abc241/f.rs"

[[bin]]
name = "abc241_g"
path = "src/abc241/g.rs"

[[bin]]
name = "abc241_h"
path = "src/abc241/h.rs"

[[bin]]
name = "abc238_a"
path = "src/abc238/a.rs"

[[bin]]
name = "abc238_b"
path = "src/abc238/b.rs"

[[bin]]
name = "abc238_c"
path = "src/abc238/c.rs"

[[bin]]
name = "abc238_d"
path = "src/abc238/d.rs"

[[bin]]
name = "abc238_e"
path = "src/abc238/e.rs"

[[bin]]
name = "abc238_f"
path = "src/abc238/f.rs"

[[bin]]
name = "abc238_g"
path = "src/abc238/g.rs"

[[bin]]
name = "abc238_h"
path = "src/abc238/h.rs"

[[bin]]
name = "abc236_a"
path = "src/abc236/a.rs"

[[bin]]
name = "abc236_b"
path = "src/abc236/b.rs"

[[bin]]
name = "abc236_c"
path = "src/abc236/c.rs"

[[bin]]
name = "abc236_d"
path = "src/abc236/d.rs"

[[bin]]
name = "abc236_e"
path = "src/abc236/e.rs"

[[bin]]
name = "abc236_f"
path = "src/abc236/f.rs"

[[bin]]
name = "abc236_g"
path = "src/abc236/g.rs"

[[bin]]
name = "abc236_h"
path = "src/abc236/h.rs"

[[bin]]
name = "abc235_a"
path = "src/abc235/a.rs"

[[bin]]
name = "abc235_b"
path = "src/abc235/b.rs"

[[bin]]
name = "abc235_c"
path = "src/abc235/c.rs"

[[bin]]
name = "abc235_d"
path = "src/abc235/d.rs"

[[bin]]
name = "abc235_e"
path = "src/abc235/e.rs"

[[bin]]
name = "abc235_f"
path = "src/abc235/f.rs"

[[bin]]
name = "abc235_g"
path = "src/abc235/g.rs"

[[bin]]
name = "abc235_h"
path = "src/abc235/h.rs"

[[bin]]
name = "abc230_a"
path = "src/abc230/a.rs"

[[bin]]
name = "abc230_b"
path = "src/abc230/b.rs"

[[bin]]
name = "abc230_c"
path = "src/abc230/c.rs"

[[bin]]
name = "abc230_d"
path = "src/abc230/d.rs"

[[bin]]
name = "abc230_e"
path = "src/abc230/e.rs"

[[bin]]
name = "abc230_f"
path = "src/abc230/f.rs"

[[bin]]
name = "abc230_g"
path = "src/abc230/g.rs"

[[bin]]
name = "abc230_h"
path = "src/abc230/h.rs"

[[bin]]
name = "abc228_a"
path = "src/abc228/a.rs"

[[bin]]
name = "abc228_b"
path = "src/abc228/b.rs"

[[bin]]
name = "abc228_c"
path = "src/abc228/c.rs"

[[bin]]
name = "abc228_d"
path = "src/abc228/d.rs"

[[bin]]
name = "abc228_e"
path = "src/abc228/e.rs"

[[bin]]
name = "abc228_f"
path = "src/abc228/f.rs"

[[bin]]
name = "abc228_g"
path = "src/abc228/g.rs"

[[bin]]
name = "abc228_h"
path = "src/abc228/h.rs"

[[bin]]
name = "abc227_a"
path = "src/abc227/a.rs"

[[bin]]
name = "abc227_b"
path = "src/abc227/b.rs"

[[bin]]
name = "abc227_c"
path = "src/abc227/c.rs"

[[bin]]
name = "abc227_d"
path = "src/abc227/d.rs"

[[bin]]
name = "abc227_e"
path = "src/abc227/e.rs"

[[bin]]
name = "abc227_f"
path = "src/abc227/f.rs"

[[bin]]
name = "abc227_g"
path = "src/abc227/g.rs"

[[bin]]
name = "abc227_h"
path = "src/abc227/h.rs"

[[bin]]
name = "abc224_a"
path = "src/abc224/a.rs"

[[bin]]
name = "abc224_b"
path = "src/abc224/b.rs"

[[bin]]
name = "abc224_c"
path = "src/abc224/c.rs"

[[bin]]
name = "abc224_d"
path = "src/abc224/d.rs"

[[bin]]
name = "abc224_e"
path = "src/abc224/e.rs"

[[bin]]
name = "abc224_f"
path = "src/abc224/f.rs"

[[bin]]
name = "abc224_g"
path = "src/abc224/g.rs"

[[bin]]
name = "abc224_h"
path = "src/abc224/h.rs"

[[bin]]
name = "abc284_a"
path = "src/abc284/a.rs"

[[bin]]
name = "abc284_b"
path = "src/abc284/b.rs"

[[bin]]
name = "abc284_c"
path = "src/abc284/c.rs"

[[bin]]
name = "abc284_d"
path = "src/abc284/d.rs"

[[bin]]
name = "abc284_e"
path = "src/abc284/e.rs"

[[bin]]
name = "abc284_f"
path = "src/abc284/f.rs"

[[bin]]
name = "abc284_g"
path = "src/abc284/g.rs"

[[bin]]
name = "abc284_h"
path = "src/abc284/h.rs"

[[bin]]
name = "abc223_a"
path = "src/abc223/a.rs"

[[bin]]
name = "abc223_b"
path = "src/abc223/b.rs"

[[bin]]
name = "abc223_c"
path = "src/abc223/c.rs"

[[bin]]
name = "abc223_d"
path = "src/abc223/d.rs"

[[bin]]
name = "abc223_e"
path = "src/abc223/e.rs"

[[bin]]
name = "abc223_f"
path = "src/abc223/f.rs"

[[bin]]
name = "abc223_g"
path = "src/abc223/g.rs"

[[bin]]
name = "abc223_h"
path = "src/abc223/h.rs"

[[bin]]
name = "abc285_a"
path = "src/abc285/a.rs"

[[bin]]
name = "abc285_b"
path = "src/abc285/b.rs"

[[bin]]
name = "abc285_c"
path = "src/abc285/c.rs"

[[bin]]
name = "abc285_d"
path = "src/abc285/d.rs"

[[bin]]
name = "abc285_e"
path = "src/abc285/e.rs"

[[bin]]
name = "abc285_f"
path = "src/abc285/f.rs"

[[bin]]
name = "abc285_g"
path = "src/abc285/g.rs"

[[bin]]
name = "abc285_h"
path = "src/abc285/h.rs"

[[bin]]
name = "abc222_a"
path = "src/abc222/a.rs"

[[bin]]
name = "abc222_b"
path = "src/abc222/b.rs"

[[bin]]
name = "abc222_c"
path = "src/abc222/c.rs"

[[bin]]
name = "abc222_d"
path = "src/abc222/d.rs"

[[bin]]
name = "abc222_e"
path = "src/abc222/e.rs"

[[bin]]
name = "abc222_f"
path = "src/abc222/f.rs"

[[bin]]
name = "abc222_g"
path = "src/abc222/g.rs"

[[bin]]
name = "abc222_h"
path = "src/abc222/h.rs"

[[bin]]
name = "abc221_a"
path = "src/abc221/a.rs"

[[bin]]
name = "abc221_b"
path = "src/abc221/b.rs"

[[bin]]
name = "abc221_c"
path = "src/abc221/c.rs"

[[bin]]
name = "abc221_d"
path = "src/abc221/d.rs"

[[bin]]
name = "abc221_e"
path = "src/abc221/e.rs"

[[bin]]
name = "abc221_f"
path = "src/abc221/f.rs"

[[bin]]
name = "abc221_g"
path = "src/abc221/g.rs"

[[bin]]
name = "abc221_h"
path = "src/abc221/h.rs"

[[bin]]
name = "abc286_a"
path = "src/abc286/a.rs"

[[bin]]
name = "abc286_b"
path = "src/abc286/b.rs"

[[bin]]
name = "abc286_c"
path = "src/abc286/c.rs"

[[bin]]
name = "abc286_d"
path = "src/abc286/d.rs"

[[bin]]
name = "abc286_e"
path = "src/abc286/e.rs"

[[bin]]
name = "abc286_f"
path = "src/abc286/f.rs"

[[bin]]
name = "abc286_g"
path = "src/abc286/g.rs"

[[bin]]
name = "abc286_h"
path = "src/abc286/h.rs"

[[bin]]
name = "abc219_a"
path = "src/abc219/a.rs"

[[bin]]
name = "abc219_b"
path = "src/abc219/b.rs"

[[bin]]
name = "abc219_c"
path = "src/abc219/c.rs"

[[bin]]
name = "abc219_d"
path = "src/abc219/d.rs"

[[bin]]
name = "abc219_e"
path = "src/abc219/e.rs"

[[bin]]
name = "abc219_f"
path = "src/abc219/f.rs"

[[bin]]
name = "abc219_g"
path = "src/abc219/g.rs"

[[bin]]
name = "abc219_h"
path = "src/abc219/h.rs"

[[bin]]
name = "abc218_a"
path = "src/abc218/a.rs"

[[bin]]
name = "abc218_b"
path = "src/abc218/b.rs"

[[bin]]
name = "abc218_c"
path = "src/abc218/c.rs"

[[bin]]
name = "abc218_d"
path = "src/abc218/d.rs"

[[bin]]
name = "abc218_e"
path = "src/abc218/e.rs"

[[bin]]
name = "abc218_f"
path = "src/abc218/f.rs"

[[bin]]
name = "abc218_g"
path = "src/abc218/g.rs"

[[bin]]
name = "abc218_h"
path = "src/abc218/h.rs"

[[bin]]
name = "abc214_a"
path = "src/abc214/a.rs"

[[bin]]
name = "abc214_b"
path = "src/abc214/b.rs"

[[bin]]
name = "abc214_c"
path = "src/abc214/c.rs"

[[bin]]
name = "abc214_d"
path = "src/abc214/d.rs"

[[bin]]
name = "abc214_e"
path = "src/abc214/e.rs"

[[bin]]
name = "abc214_f"
path = "src/abc214/f.rs"

[[bin]]
name = "abc214_g"
path = "src/abc214/g.rs"

[[bin]]
name = "abc214_h"
path = "src/abc214/h.rs"

[[bin]]
name = "abc217_a"
path = "src/abc217/a.rs"

[[bin]]
name = "abc217_b"
path = "src/abc217/b.rs"

[[bin]]
name = "abc217_c"
path = "src/abc217/c.rs"

[[bin]]
name = "abc217_d"
path = "src/abc217/d.rs"

[[bin]]
name = "abc217_e"
path = "src/abc217/e.rs"

[[bin]]
name = "abc217_f"
path = "src/abc217/f.rs"

[[bin]]
name = "abc217_g"
path = "src/abc217/g.rs"

[[bin]]
name = "abc217_h"
path = "src/abc217/h.rs"

[[bin]]
name = "abc216_a"
path = "src/abc216/a.rs"

[[bin]]
name = "abc216_b"
path = "src/abc216/b.rs"

[[bin]]
name = "abc216_c"
path = "src/abc216/c.rs"

[[bin]]
name = "abc216_d"
path = "src/abc216/d.rs"

[[bin]]
name = "abc216_e"
path = "src/abc216/e.rs"

[[bin]]
name = "abc216_f"
path = "src/abc216/f.rs"

[[bin]]
name = "abc216_g"
path = "src/abc216/g.rs"

[[bin]]
name = "abc216_h"
path = "src/abc216/h.rs"

[[bin]]
name = "abc287_a"
path = "src/abc287/a.rs"

[[bin]]
name = "abc287_b"
path = "src/abc287/b.rs"

[[bin]]
name = "abc287_c"
path = "src/abc287/c.rs"

[[bin]]
name = "abc287_d"
path = "src/abc287/d.rs"

[[bin]]
name = "abc287_e"
path = "src/abc287/e.rs"

[[bin]]
name = "abc287_f"
path = "src/abc287/f.rs"

[[bin]]
name = "abc287_g"
path = "src/abc287/g.rs"

[[bin]]
name = "abc287_h"
path = "src/abc287/h.rs"

[[bin]]
name = "abc288_a"
path = "src/abc288/a.rs"

[[bin]]
name = "abc288_b"
path = "src/abc288/b.rs"

[[bin]]
name = "abc288_c"
path = "src/abc288/c.rs"

[[bin]]
name = "abc288_d"
path = "src/abc288/d.rs"

[[bin]]
name = "abc288_e"
path = "src/abc288/e.rs"

[[bin]]
name = "abc288_f"
path = "src/abc288/f.rs"

[[bin]]
name = "abc288_g"
path = "src/abc288/g.rs"

[[bin]]
name = "abc288_h"
path = "src/abc288/h.rs"

[[bin]]
name = "abc289_a"
path = "src/abc289/a.rs"

[[bin]]
name = "abc289_b"
path = "src/abc289/b.rs"

[[bin]]
name = "abc289_c"
path = "src/abc289/c.rs"

[[bin]]
name = "abc289_d"
path = "src/abc289/d.rs"

[[bin]]
name = "abc289_e"
path = "src/abc289/e.rs"

[[bin]]
name = "abc289_f"
path = "src/abc289/f.rs"

[[bin]]
name = "abc289_g"
path = "src/abc289/g.rs"

[[bin]]
name = "abc289_h"
path = "src/abc289/h.rs"

[[bin]]
name = "abc290_a"
path = "src/abc290/a.rs"

[[bin]]
name = "abc290_b"
path = "src/abc290/b.rs"

[[bin]]
name = "abc290_c"
path = "src/abc290/c.rs"

[[bin]]
name = "abc290_d"
path = "src/abc290/d.rs"

[[bin]]
name = "abc290_e"
path = "src/abc290/e.rs"

[[bin]]
name = "abc290_f"
path = "src/abc290/f.rs"

[[bin]]
name = "abc290_g"
path = "src/abc290/g.rs"

[[bin]]
name = "abc290_h"
path = "src/abc290/h.rs"

[[bin]]
name = "abc291_a"
path = "src/abc291/a.rs"

[[bin]]
name = "abc291_b"
path = "src/abc291/b.rs"

[[bin]]
name = "abc291_c"
path = "src/abc291/c.rs"

[[bin]]
name = "abc291_d"
path = "src/abc291/d.rs"

[[bin]]
name = "abc291_e"
path = "src/abc291/e.rs"

[[bin]]
name = "abc291_f"
path = "src/abc291/f.rs"

[[bin]]
name = "abc291_g"
path = "src/abc291/g.rs"

[[bin]]
name = "abc291_h"
path = "src/abc291/h.rs"

[[bin]]
name = "abc292_a"
path = "src/abc292/a.rs"

[[bin]]
name = "abc292_b"
path = "src/abc292/b.rs"

[[bin]]
name = "abc292_c"
path = "src/abc292/c.rs"

[[bin]]
name = "abc292_d"
path = "src/abc292/d.rs"

[[bin]]
name = "abc292_e"
path = "src/abc292/e.rs"

[[bin]]
name = "abc292_f"
path = "src/abc292/f.rs"

[[bin]]
name = "abc292_g"
path = "src/abc292/g.rs"

[[bin]]
name = "abc292_h"
path = "src/abc292/h.rs"